# wk-watchdog-genai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cliff.toml  conftest.py  docker-compose.yml  prompts.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/api/: pyproject.toml
apps/api/src/watchdog_api/: config.py  dependencies.py  main.py
apps/api/src/watchdog_api/observability/: logging.py  otel.py
apps/api/src/watchdog_api/routes/: dashboard.py  health.py  ingestion.py  metrics.py  sink.py
apps/api/src/watchdog_api/schemas/: errors.py
apps/api/src/watchdog_api/static/: README.md
apps/api/src/watchdog_api/templates/: alert_detail.html  dashboard.html  layout.html
apps/api/src/watchdog_api/templates/partials/: alerts.html
apps/api/tests/: conftest.py  test_contract_openapi.py  test_dashboard_routes.py  test_detection.py  test_e2e_alerting.py  test_ingestion_route.py  test_metrics_endpoint.py  test_otel_smoke.py
docker/: otelcol-config.yaml  prometheus.yml
docker/grafana/dashboards/: watchdog.json
docker/grafana/provisioning/dashboards/: watchdog.yaml
docker/grafana/provisioning/datasources/: prometheus.yaml
docs/: TESTS.md
docs/adr/: 0001-architecture.md  0002-sqlite-over-postgres.md  0003-ewma-over-scipy.md  0004-anthropic-tool-use.md  0005-outbox-pattern.md  0006-htmx-over-spa.md
scripts/: demo.py  seed_traffic.py  test_docker_smoke.sh
submission/: SUBMISSION.md  architecture.mmd  presentation.md  tagle-tag.md
