# wk-watchdog — uv VIRTUAL workspace root
#
# Intentionally NO [project] section: this file coordinates workspace members,
# centralizes dev dependencies, and houses tool configuration. Each member
# (apps/api, packages/watchdog-core, packages/watchdog-sdk) carries its own
# [project] + build-system. See docs/adr/0001-architecture.md (Decision 4).

# ----------------------------------------------------------------------------
# Workspace
# ----------------------------------------------------------------------------

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv.sources]
watchdog-api  = { workspace = true }
watchdog-core = { workspace = true }
watchdog-sdk  = { workspace = true }

[tool.uv]
default-groups = ["dev"]

# ----------------------------------------------------------------------------
# Dev dependencies (PEP 735 dependency groups, installed by `uv sync`)
# ----------------------------------------------------------------------------

[dependency-groups]
dev = [
  "ruff>=0.7",
  "black>=24.10",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "httpx>=0.27",
  "respx>=0.21",
  "hypothesis>=6",
]

# ----------------------------------------------------------------------------
# Ruff — rules ALL minus a justified ignore list
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
  "apps/api/src",
  "packages/watchdog-core/src",
  "packages/watchdog-sdk/src",
]
extend-exclude = ["_planning", "data", ".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # ---- Docstrings: enforce at the function/class level later, not on every dunder file. ----
  "D100", # missing docstring in public module
  "D101", # missing docstring in public class
  "D102", # missing docstring in public method
  "D103", # missing docstring in public function
  "D104", # missing docstring in public package
  "D105", # missing docstring in magic method
  "D106", # missing docstring in nested class
  "D107", # missing docstring in __init__
  # ---- Style conflicts with black ----
  "D203", # 1 blank line before class docstring (conflicts with D211)
  "D213", # multi-line docstring summary on second line (conflicts with D212)
  "COM812", # missing trailing comma (ruff format owns this)
  "ISC001", # implicit string concat on same line (ruff format owns this)
  # ---- Pragmatic carve-outs ----
  "ANN401", # `Any` allowed for typed-dict overflow and **kwargs patterns
  "FIX002", # "TODO" comments allowed; we track via GitHub issues
  "TD002",  # TODO author missing
  "TD003",  # TODO link missing
  "CPY001", # copyright header — single-author repo, no policy yet
  # ---- flake8-type-checking — net-negative for this codebase ----
  # The TC family pushes annotation-only imports into `if TYPE_CHECKING:`
  # blocks to shave milliseconds from import time. For an application
  # MVP that boilerplate is pure cost. Worse: Pydantic v2 models
  # resolve annotations via get_type_hints at class-construction time
  # and will raise NameError if `UUID`, `datetime`, etc. are gated
  # behind TYPE_CHECKING. We turn TC001-TC003 off explicitly.
  "TC001", "TC002", "TC003",
]

[tool.ruff.lint.flake8-type-checking]
# Belt-and-braces in case TC rules are re-enabled later: tell ruff that
# anything subclassing pydantic.BaseModel needs runtime-resolvable
# annotations.
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  "F401", # re-exports may look unused
  "D104", # already global-ignored, kept explicit for grep-ability
]
"**/tests/**/*.py" = [
  "S101",   # pytest uses `assert`
  "PLR2004", # magic numbers in test fixtures
  "ANN",     # tests don't need exhaustive type annotations
  "D",       # tests don't need docstrings
  "INP001",  # tests aren't a namespace package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ----------------------------------------------------------------------------
# Black — formatter (run alongside ruff format for belt-and-braces)
# ----------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '/(\.venv|_planning|data)/'

# ----------------------------------------------------------------------------
# Mypy — strict mode
# ----------------------------------------------------------------------------

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_configs = true
mypy_path = [
  "apps/api/src",
  "packages/watchdog-core/src",
  "packages/watchdog-sdk/src",
]
explicit_package_bases = true
namespace_packages = true
exclude = "(^_planning/|/data/)"

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov --cov-fail-under=80 --strict-markers --strict-config"
testpaths = ["apps", "packages"]
markers = [
  "slow: tests that take >1s",
  "integration: tests that touch real I/O",
]

# ----------------------------------------------------------------------------
# Coverage
# ----------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["watchdog_api", "watchdog_core", "watchdog_sdk"]
omit = [
  "**/__init__.py",
  "**/tests/**",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  'if __name__ == "__main__":',
]
show_missing = true
skip_covered = false
