# wk-watchdog — uv VIRTUAL workspace root
#
# Intentionally NO [project] section: this file coordinates workspace members,
# centralizes dev dependencies, and houses tool configuration. Each member
# (apps/api, packages/watchdog-core, packages/watchdog-sdk) carries its own
# [project] + build-system. See docs/adr/0001-architecture.md (Decision 4).

# ----------------------------------------------------------------------------
# Workspace
# ----------------------------------------------------------------------------

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv.sources]
watchdog-api  = { workspace = true }
watchdog-core = { workspace = true }
watchdog-sdk  = { workspace = true }

[tool.uv]
default-groups = ["dev"]

# ----------------------------------------------------------------------------
# Dev dependencies (PEP 735 dependency groups, installed by `uv sync`)
# ----------------------------------------------------------------------------

[dependency-groups]
dev = [
  "ruff>=0.7",
  "black>=24.10",
  "mypy>=1.13",
  "pytest>=9.0.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "httpx>=0.27",
  "respx>=0.21",
  "hypothesis>=6",
  "schemathesis>=3.39",
]

# ----------------------------------------------------------------------------
# Ruff — rules ALL minus a justified ignore list
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
  "apps/api/src",
  "packages/watchdog-core/src",
  "packages/watchdog-sdk/src",
]
extend-exclude = ["_planning", "data", ".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # ---- Docstrings: enforce at the function/class level later, not on every dunder file. ----
  "D100", # missing docstring in public module
  "D101", # missing docstring in public class
  "D102", # missing docstring in public method
  "D103", # missing docstring in public function
  "D104", # missing docstring in public package
  "D105", # missing docstring in magic method
  "D106", # missing docstring in nested class
  "D107", # missing docstring in __init__
  # ---- Style conflicts with black ----
  "D203", # 1 blank line before class docstring (conflicts with D211)
  "D213", # multi-line docstring summary on second line (conflicts with D212)
  "COM812", # missing trailing comma (ruff format owns this)
  "ISC001", # implicit string concat on same line (ruff format owns this)
  # ---- Pragmatic carve-outs ----
  "ANN401", # `Any` allowed for typed-dict overflow and **kwargs patterns
  "FIX002", # "TODO" comments allowed; we track via GitHub issues
  "TD002",  # TODO author missing
  "TD003",  # TODO link missing
  "CPY001", # copyright header — single-author repo, no policy yet
  # ---- flake8-type-checking — net-negative for this codebase ----
  # The TC family pushes annotation-only imports into `if TYPE_CHECKING:`
  # blocks to shave milliseconds from import time. For an application
  # MVP that boilerplate is pure cost. Worse: Pydantic v2 models
  # resolve annotations via get_type_hints at class-construction time
  # and will raise NameError if `UUID`, `datetime`, etc. are gated
  # behind TYPE_CHECKING. We turn TC001-TC003 off explicitly.
  "TC001", "TC002", "TC003",
]

[tool.ruff.lint.flake8-type-checking]
# Belt-and-braces in case TC rules are re-enabled later: tell ruff that
# anything subclassing pydantic.BaseModel needs runtime-resolvable
# annotations.
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  "F401", # re-exports may look unused
  "D104", # already global-ignored, kept explicit for grep-ability
]
"**/tests/**/*.py" = [
  "S101",   # pytest uses `assert`
  "PLR2004", # magic numbers in test fixtures
  "ANN",     # tests don't need exhaustive type annotations
  "D",       # tests don't need docstrings
  "INP001",  # tests aren't a namespace package
  "PT018",   # compound assertions are clearer than splitting in our style
]
"scripts/**/*.py" = [
  "INP001",  # scripts/ is a Makefile-invoked toolbox, not a Python package
  "T201",    # CLI tools use `print` for human-readable progress
  "S311",    # synthetic-data generators use random; not a crypto context
  "PLR2004", # CLI tools use small inline constants for clarity
  "D",       # CLI tools don't need docstrings on every function
]
"packages/watchdog-sdk/src/watchdog_sdk/retries.py" = [
  "S311",  # jittered exponential backoff uses `random.uniform`; this is
           # standard retry-policy practice, NOT a security context.
]
"packages/watchdog-sdk/examples/**/*.py" = [
  "INP001",  # examples/ is runnable scripts, not a package
  "T201",    # print() is the right tool in a quickstart
  "D",       # examples are read top-to-bottom; per-function docstrings
             # would add noise without value
]
"packages/watchdog-sdk/tests/test_sdk_type_safety.py" = [
  "S603",    # subprocess input is a static list of literals — no injection
  "S607",    # `uv` is the documented runtime entry; an absolute path would
             # make the test platform-specific (CI uses different layouts)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ----------------------------------------------------------------------------
# Black — formatter (run alongside ruff format for belt-and-braces)
# ----------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '/(\.venv|_planning|data)/'

# ----------------------------------------------------------------------------
# Mypy — strict mode
# ----------------------------------------------------------------------------

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_configs = true
mypy_path = [
  "apps/api/src",
  "packages/watchdog-core/src",
  "packages/watchdog-sdk/src",
]
explicit_package_bases = true
namespace_packages = true
exclude = "(^_planning/|/data/)"

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Default selection runs `unit` + `integration`. `slow` is opt-in
# (`pytest -m slow`); `contract` is a separate CI step driven by
# the schemathesis CLI — see the `test-contract` Makefile target.
addopts = "--cov --cov-fail-under=80 --strict-markers --strict-config -m 'unit or integration'"
testpaths = ["apps", "packages"]
markers = [
  "unit: fast in-process tests with no external I/O surface",
  "integration: ASGI-app or aiosqlite file-DB tests (sub-100ms each)",
  "contract: OpenAPI conformance via schemathesis (manual CI step)",
  "slow: large-state-space tests (Hypothesis many-examples); opt-in via -m slow",
]

# ----------------------------------------------------------------------------
# Mutation testing (manual; NOT run in CI — too slow). Configured to mutate
# the detection package because its branchy z-score / bucket logic is where
# subtle off-by-one bugs would do the most damage. Run with:
#   uv run mutmut run --paths-to-mutate packages/watchdog-core/src/watchdog_core/detection
# Survivors indicate tests that don't actually constrain the code. The
# bar is to keep survivor count under the threshold a future ADR sets.
# ----------------------------------------------------------------------------

[tool.mutmut]
paths_to_mutate = "packages/watchdog-core/src/watchdog_core/detection/"
runner = "uv run pytest -x -q --no-cov -m 'unit or integration'"
tests_dir = "packages/watchdog-core/tests/"

# ----------------------------------------------------------------------------
# Coverage
# ----------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["watchdog_api", "watchdog_core", "watchdog_sdk"]
omit = [
  "**/__init__.py",
  "**/tests/**",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  'if __name__ == "__main__":',
]
show_missing = true
skip_covered = false
