[project]
name = "watchdog-api"
version = "0.1.0"
description = "wk-watchdog HTTP API (FastAPI + aiosqlite)"
readme = "../../README.md"
requires-python = ">=3.12"
authors = [{ name = "Willian Pinho", email = "willianpinho@gmail.com" }]
license = { text = "MIT" }
dependencies = [
  "watchdog-core",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "aiosqlite>=0.20",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "opentelemetry-exporter-prometheus>=0.48b0",
  "structlog>=24.4",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchdog_api"]
